# pydantic-ai-perseus-vault

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
pydantic_ai_mimir/: __init__.py  toolset.py
pydantic_ai_perseus_vault/: __init__.py  toolset.py
tests/: test_toolset.py
