[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-ai-mimir"
version = "0.1.0"
authors = [
    { name = "Perseus Computing LLC", email = "hermes@perseus.observer" },
]
description = "Mimir persistent, local, encrypted memory for Pydantic AI agents — exposed as a Toolset."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["pydantic-ai", "mcp", "memory", "mimir", "agents", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    # `pydantic-ai-slim[mcp]` provides MCPToolset + the fastmcp StdioTransport we
    # build on. The slim distribution avoids pulling in every model provider.
    "pydantic-ai-slim[mcp]>=1.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/Perseus-Computing-LLC/pydantic-ai-mimir"
Repository = "https://github.com/Perseus-Computing-LLC/pydantic-ai-mimir"
"Bug Tracker" = "https://github.com/Perseus-Computing-LLC/pydantic-ai-mimir/issues"
Mimir = "https://github.com/Perseus-Computing-LLC/mimir"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai_mimir"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
